docs(database): 更新 jvm